data/all_generated_tests/raw_wast_tests/return_StackCorruption_2657.wast
;; 6. **Test 6: Function End without Return**    - Design a function where the final instruction implicitly returns by running out of instructions. Compare handling of such implicit returns versus explicit `return` instructions.    - *Related Constraint*: Checks handling consistency between implicit and explicit returns.

(assert_invalid
  (module
    (func $test_implicit_vs_explicit_return (result i32)
      (i32.const 42)
    )
  )
  "type mismatch"
)